Fix product card spacing on Georgia splash page.

--- a/wp-content/themes/sparkart/css/src/georgia-splash-page.scss
+++ b/wp-content/themes/sparkart/css/src/georgia-splash-page.scss
@@ -228,6 +228,7 @@ a.section-link:hover, a.section-link:focus {
             text-align: center;
             line-height: 1.25;
             margin-bottom: 0;
+            padding: 0 10px;
           }
           .product__price {
             font-size: 25px;
